// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Demo expanded:false 1`] = `
<div>
  <section>
    <h2>
      OpenCloseIcon
    </h2>
     
    <div>
      <svg
        class="icon"
        style="transform: rotate(0); fill: currentColor; stroke: currentColor;"
        viewBox="0 0 64 64"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <circle
          cx="32"
          cy="32"
          fill="white"
          r="32"
        />
         
        <g
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
        >
          <path
            d="M 32 20 32 44"
            style="transform-origin: 50% 50%; transition: all 0.5s;"
          />
           
          <path
            d="M 20 32 44 32"
            style="transform-origin: 50% 50%; transition: all 0.5s;"
          />
        </g>
      </svg>
       
      <svg
        class="icon"
        style="transform: rotate(45deg); fill: currentColor; stroke: currentColor;"
        viewBox="0 0 64 64"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <circle
          cx="32"
          cy="32"
          fill=""
          r="32"
        />
         
        <g
          stroke="white"
          stroke-linecap="round"
          stroke-width="6"
        >
          <path
            d="M 32 20 32 44"
            style="transform-origin: 50% 50%; transition: all 1s;"
          />
           
          <path
            d="M 20 32 44 32"
            style="transform-origin: 50% 50%; transition: all 1s;"
          />
        </g>
      </svg>
    </div>
  </section>
</div>
`;

exports[`Demo expanded:true 1`] = `
<div>
  <section>
    <h2>
      OpenCloseIcon
    </h2>
     
    <div>
      <svg
        class="icon"
        style="transform: rotate(0); fill: currentColor; stroke: currentColor;"
        viewBox="0 0 64 64"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <circle
          cx="32"
          cy="32"
          fill="white"
          r="32"
        />
         
        <g
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
        >
          <path
            d="M 32 20 32 44"
            style="transform-origin: 50% 50%; transition: all 0.5s; transform: rotate(90deg);"
          />
           
          <path
            d="M 20 32 44 32"
            style="transform-origin: 50% 50%; transition: all 0.5s; transform: rotate(-180deg);"
          />
        </g>
      </svg>
       
      <svg
        class="icon"
        style="transform: rotate(45deg); fill: currentColor; stroke: currentColor;"
        viewBox="0 0 64 64"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <circle
          cx="32"
          cy="32"
          fill=""
          r="32"
        />
         
        <g
          stroke="white"
          stroke-linecap="round"
          stroke-width="6"
        >
          <path
            d="M 32 20 32 44"
            style="transform-origin: 50% 50%; transition: all 1s; transform: rotate(90deg);"
          />
           
          <path
            d="M 20 32 44 32"
            style="transform-origin: 50% 50%; transition: all 1s; transform: rotate(-180deg);"
          />
        </g>
      </svg>
    </div>
  </section>
</div>
`;
